<resources>
    <string name="app_name">Calculate Now</string>
    <string name="history_is_empty">History is empty!</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="content_description_settings">SETTINGS</string>
    <string name="content_description_history">HISTORY</string>
    <string name="placeHolderForMainText">text</string>
    <string name="placeHolderForSmallText">text</string>
    <string name="Sinus">sin</string>
    <string name="Cosine">cos</string>
    <string name="Root">√</string>
    <string name="DecimalLogarithm">ln</string>
    <string name="Logarithm">log</string>
    <string name="ModuloDivision">%</string>
    <string name="blackbackspace">BlackBackspace</string>
    <string name="whitebackspace">WhiteBackspace</string>
    <string name="Pi">π</string>
    <string name="exponent">e</string>
    <string name="Power">^</string>
    <string name="BracketLeft">(</string>
    <string name="BracketRight">)</string>
    <string name="Factorial">!</string>
    <string name="DeleteAll">C</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="Dot">.</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="Equal">=</string>
    <string name="Multiply">×</string>
    <string name="Divide">÷</string>
    <string name="Minus">−</string>
    <string name="Plus">+</string>
    <string name="date">Date -</string>
    <string name="date_textView">date</string>
    <string name="time">Time -</string>
    <string name="time_textView">time</string>
    <string name="operation">Operation</string>
    <string name="result">Result</string>
    <string-array name="theme_colors">
        <item>"Blue"</item>
        <item>"Cyan"</item>
        <item>"Gray"</item>
        <item>"Green"</item>
        <item>"Purple"</item>
        <item>"Red"</item>
    </string-array>
    <string-array name="theme_colors_entries">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
    </string-array>
</resources>
